<resources>
    <string name="app_name">Brain Teaser</string>

    <string name="dummy_button">Click Me!!!</string>
    <string name="dummytext">SOON</string>
    <string name="play">Play</string>
    <string name="options">Options</string>
    <string name="achievements">Achievements</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email (Username)</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="sound">Sound</string>
    <string name="off">OFF</string>
    <string name="soundoff">soundOFF</string>
    <string name="registerbirthday">Age</string>
    <string name="registername">Name</string>
    <string name="registerpassword">Password</string>
    <string name="registerusername">Username</string>
    <string name="register_sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="languageOptions">Language</string>
    <string name="musicOptions">Music</string>
    <string name="soundOptions">Sound</string>
    <string name="languageSwitch">Language</string>
    <string name="musicSwitch">Music</string>
    <string name="soundWitch">Sound</string>
    <string name="saveButton">Save</string>
    <string name="back">Back</string>
    <string name="niveli_i_1">Niveli i 1</string>
    <string name="niveli_i_2">Niveli i 2</string>
    <string name="niveli_i_3">Niveli i 3</string>
    <string name="orderNumberStart">Play</string>
    <string name="p1_0">P1:0</string>
    <string name="helping_image">Helping Image</string>
    <string name="orderNumbersResults">This game is simple. Try to hit the numbers in the row and order them from the lowest to the biggest. Try how many can you score in 60 seconds. Press PLAY when ready.</string>
    <string name="log_out">Log Out</string>
    <string name="twoPairsHelp">This game has no timer so take your time. Try to find numbers in pairs hidden. Good luck.</string>
    <string name="you_need_to_select_the_color_that_is_written_and_press_the_button_with_that_color_try_how_many_can_you_score_in_100_seconds_press_play_when_ready">You need to choose the color of the text, its very tricky.Try how many can you score in 60 seconds. Press PLAY when ready.</string>
    <string name="color">Color</string>
    <string name="wordGameHelp">This game is tricky. Try to guess what the scrambled word means and select the answer below. Try your best</string>
    <string name="simple_just_add_numbers_and_click_the_right_results">Simple just add numbers and click the right results</string>
</resources>
