<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="1"
    tools:context="kp.project.brainteaser.LoginActivity">

    <!-- Login progress -->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/musicSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/musicSwitch" />

            <Switch
                android:id="@+id/soundSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/soundWitch"
                tools:checked="false" />

            <Switch
                android:id="@+id/languageSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/languageSwitch" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_light_frame"
                android:text="@string/saveButton" />

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_light_frame"
                android:text="@string/log_out" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
