<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/niveli1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_light_frame"
                android:text="@string/niveli_i_1" />

            <Button
                android:id="@+id/niveli2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_light_frame"
                android:text="@string/niveli_i_2" />

            <Button
                android:id="@+id/niveli3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_light_frame"
                android:text="@string/niveli_i_3" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>